--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
 		<h2>Calculadora version 5<h1>
 		<h2>Quinta version<h1>
+
+		<hr>
+                <h2>Sexta version<h1>
+
 	</body>
 
 </html>
